--- a/index.html
+++ b/index.html
@@ -2,12 +2,156 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <meta name="author" content="Denis Shesternev">
 </head>
 <body>
   <div class="page">
-
+    <header class="header">
+      <img src="./images/logo_place_header.svg" alt="Яндекс Практикум" class="logo logo_plase_header">
+      <h1 class="title title_place_header">Научиться учиться</h1>
+      <p class="subtitle subtitle_place_header">
+        <a>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?</a>
+        <a href="#" class="header_link">Узнать &rarr;</a>
+      </p>
+      <img src="./images/header-image.png" class="main-illustration" alt="Опять двойка">
+      <div class="header__square-pic"></div>
+    </header>
+    <main class="content">
+      <section class="description">
+       <div class="two-columns">
+          <h1 class="two-columns_brief">Главные проблемы в обучении</h1>
+          <div class="two-columns_main-text">
+            <p class="two-columns_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns_paragraph"><span class="two-columns_span">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
+      </section>
+      <section class="digits">
+       <h1 class="section-title">Цифры и факты</h1>
+          <h2 class="section-subtitle">Про учёбу и мозг</h2>
+       <ul class="table">
+         <li class="table_cell">
+            <h2 class="table_heading">86 миллиардов</h2>
+             <h3 class="table_text">Число нейронов в мозге человека</h3>
+          </li>
+          <li class="table_cell">
+            <h2 class="table_heading">2.1 миллиарда</h2>
+              <h3 class="table_text">Число нуждающихся в повышении квалификации</h3>
+              <h3 class="table_text">Всемирный Банк, 2017</h3>
+          </li>
+          <li class="table_cell">
+            <h2 class="table_heading">1000 терабайт</h2>
+              <h3 class="table_text">Объём памяти человека</h3>
+          </li>
+          <li class="table_cell">
+            <h2 class="table_heading">500 триллионов</h2>
+              <h3 class="table_text">Число ответственных за обучение нервных синапсов у взрослого человека</h3>
+          </li>
+          <li class="table_cell">
+            <h2 class="table_heading">420 миллионов</h2>
+              <h3 class="table_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</h3>
+              <h3 class="table_text">Всемирный Банк, 2017</h3>
+          </li>
+          <li class="table_cell">
+            <h2 class="table_heading">17–20 лет</h2>
+              <h3 class="table_text">Пик обучаемости</h3>
+          </li>
+          <li class="table_cell">
+            <h2 class="table_heading">1885 год</h2>
+              <h3 class="table_text">Открытие кривой забывания</h3>
+          </li>
+          <li class="table_cell">
+            <h2 class="table_heading">1889 год</h2>
+              <h3 class="table_text">Открытие условного рефлекса</h3>
+          </li>
+        </ul>
+      </section>
+      <section class="feynman">
+        <h1 class="feynman-title">Метод Фейнмана</h1>
+        <h2 class="feynman-subtitle">Выучить и не забыть</h2>
+        <a href="#" class="feynman_link">Подробнее &rarr;</a>
+        <img src="./images/feynman.png" class="feynman_img" alt="Ричард Фейнман">
+      </section>
+      <section class="kaufman">
+        <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
+         <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <ul class="table table_theme_dark">
+          <li class="table_cell table__cell_theme_dark">
+            <h2 class="table_heading table__heading_theme_dark">1</h2>
+              <h3 class="table_text table__text_theme_dark">Выберите привлекательный проект.</h3>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <h2 class="table_heading table__heading_theme_dark">2</h2>
+              <h3 class="table_text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</h3>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <h2 class="table_heading table__heading_theme_dark">3</h2>
+              <h3 class="table_text table__text_theme_dark">Определите целевой уровень мастерства.</h3>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <h2 class="table_heading table__heading_theme_dark">4</h2>
+              <h3 class="table_text table__text_theme_dark">Разбейте навык на элементы.</h3>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <h2 class="table_heading table__heading_theme_dark">5</h2>
+              <h3 class="table_text table__text_theme_dark">Приготовьте всё необходимое для занятий.</h3>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <h2 class="table_heading table__heading_theme_dark">6</h2>
+              <h3 class="table_text table__text_theme_dark">Устраните препятствия для занятий.</h3>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <h2 class="table_heading table__heading_theme_dark">7</h2>
+              <h3 class="table_text table__text_theme_dark">Выделите специальное время для занятий.</h3>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <h2 class="table_heading table__heading_theme_dark">8</h2>
+              <h3 class="table_text table__text_theme_dark">Создайте быстрые петли обратной связи.</h3>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <h2 class="table_heading table__heading_theme_dark">9</h2>
+              <h3 class="table_text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</h3>
+          </li>
+          <li class="table_cell table__cell_theme_dark">
+            <h2 class="table_heading table__heading_theme_dark">10</h2>
+              <h3 class="table_text table__text_theme_dark">Уделяйте внимание количеству и скорости.</h3>
+          </li>
+        </ul>
+        <img src="./images/kaufman-triangle.svg" class="triangle" alt="Синий треугольник">
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="columns">
+        <div class="column_content column_content_copyright">
+          <img class="logo footer_logo_place" src="./images/logo_place_footer.svg" alt="Яндекс Практикум">
+          <p class="author">&copy Denis Shesternev</p>
+        </div>
+        <div class="column_content column_content_info">
+          <h3 class="column_heading">О Практикуме</h3>
+            <a class="column-link" href="#">Главная</a>
+            <a class="column-link" href="#">Концепции</a>
+            <a class="column-link" href="#">Наставники</a>
+        </div>
+        <div class="column_content column_content_social">
+          <h3 class="column_heading">Соцсети</h3>
+            <a class="column-link" href="#">
+              <img src="./images/youtube-icon.svg" class="social-icon" alt="YouTube">
+              YouTube
+            </a>
+            <a class="column-link" href="#">
+              <img src="./images/vk_color_white.svg" class="social-icon" alt="ВКонтакте">
+              ВКонтакте</a>
+            <a class="column-link" href="#">
+              <img src="./images//tiktok-icon.svg" class="social-icon" alt="TikTok">
+              TikTok</a>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
