--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
         <div class="column_content column_content_social">
           <h3 class="column_heading">Соцсети</h3>
             <a class="column-link" href="#">
-              <img src="./images/youtube-icon.svg" class="social-icon" alt="YouTube">
+              <img src="./images/youtube-icon.svg" class="social-icon" alt="Ютуб">
               YouTube
             </a>
             <a class="column-link" href="#">
               <img src="./images/vk_color_white.svg" class="social-icon" alt="ВКонтакте">
               ВКонтакте</a>
             <a class="column-link" href="#">
-              <img src="./images//tiktok-icon.svg" class="social-icon" alt="TikTok">
+              <img src="./images//tiktok-icon.svg" class="social-icon" alt="ТикТок">
               TikTok</a>
         </div>
       </div>
