--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="./images/logo_place_header.svg" alt="Яндекс Практикум" class="logo logo__place_header">
+      <img src="./images/logo_place_header.svg" alt="Яндекс Практикум" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать &rarr;</a>
@@ -21,7 +21,7 @@
     </header>
     <main class="content">
       <section aria-label="секция" class="description">
-       <article aria-label="article" class="two-columns">
+       <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
@@ -31,8 +31,8 @@
        </article>
       </section>
       <section class="digits">
-        <h2 class="section__title">Цифры и факты</h2>
-        <a class="section__subtitle">Про учёбу и мозг</a>
+        <h2 class="section-title">Цифры и факты</h2>
+        <a class="section-subtitle">Про учёбу и мозг</a>
           <ul class="table">
             <li class="table__cell">
               <h3 class="table__heading">86 миллиардов</h3>
@@ -77,9 +77,9 @@
         <img src="./images/feynman.png" class="feynman__img" alt="Ричард Фейнман">
       </section>
       <section class="kaufman">
-        <h2 class="section__title section__title_theme_dark">Принципы обучения</h2>
-        <a class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</a>
-        <ul class="table table__theme_dark">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <a class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</a>
+        <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
@@ -126,17 +126,17 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content footer__column_content_copyright">
-          <div class="logo logo__place_footer" ></div>
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer" ></div>
           <p class="footer__author">&copy;Denis Shesternev</p>
         </div>
-        <div class="footer__column_content footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
-            <a class="footer__column-links" href="#" target="_blank">Главная</a>
-            <a class="footer__column-links" href="#" target="_blank">Концепции</a>
-            <a class="footer__column-links" href="#" target="_blank">Наставники</a>
-        </div>
-        <nav class="footer__column_content footer__column_content_social">
+            <a class="footer__column-link" href="#" target="_blank">Главная</a>
+            <a class="footer__column-link" href="#" target="_blank">Концепции</a>
+            <a class="footer__column-link" href="#" target="_blank">Наставники</a>
+        </nav>
+        <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
             <a class="footer__column-link" href="#" target="_blank">
               <img src="./images/youtube-icon.svg" class="footer__social-icon" alt="Ютуб">
@@ -148,7 +148,7 @@
             <a class="footer__column-link" href="#" target="_blank">
               <img src="./images//tiktok-icon.svg" class="footer__social-icon" alt="ТикТок">
               TikTok</a>
-            </nav>
+        </nav>
       </div>
     </footer>
   </div>
