--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
-        <a class="section-subtitle">Про учёбу и мозг</a>
+        <p class="section-subtitle">Про учёбу и мозг</p>
           <ul class="table">
             <li class="table__cell">
               <h3 class="table__heading">86 миллиардов</h3>
@@ -72,13 +72,13 @@
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <a class="feynman__subtitle">Выучить и не забыть</a>
+        <p class="feynman__subtitle">Выучить и не забыть</p>
         <a href="#" class="feynman__link">Подробнее &rarr;</a>
         <img src="./images/feynman.png" class="feynman__img" alt="Ричард Фейнман">
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <a class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</a>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -139,15 +139,11 @@
         <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
             <a class="footer__column-link" href="#" target="_blank">
-              <img src="./images/youtube-icon.svg" class="footer__social-icon" alt="Ютуб">
-              YouTube
-            </a>
+              <img src="./images/youtube-icon.svg" class="footer__social-icon" alt="Ютуб">YouTube</a>
             <a class="footer__column-link" href="#" target="_blank">
-              <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="ВКонтакте">
-              ВКонтакте</a>
+              <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="ВКонтакте">ВКонтакте</a>
             <a class="footer__column-link" href="#" target="_blank">
-              <img src="./images//tiktok-icon.svg" class="footer__social-icon" alt="ТикТок">
-              TikTok</a>
+              <img src="./images//tiktok-icon.svg" class="footer__social-icon" alt="ТикТок">TikTok</a>
         </nav>
       </div>
     </footer>
