--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
   <meta name="author" content="Denis Shesternev">
@@ -14,10 +13,10 @@
       <img src="./images/logo_place_header.svg" alt="Яндекс Практикум" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать &rarr;</a>
+        <a href="#" class="link header__link">Узнать &rarr;</a>
       </p>
       <img src="./images/header-image.png" class="header__main-illustration" alt="Опять двойка">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section aria-label="секция" class="description">
@@ -29,6 +28,59 @@
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
        </article>
+      </section>
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+          <ul class="cards">
+            <li class="cards__item">
+              <img src="./images/cards-attention.png" alt="Изображение книги" class="cards__image">
+              <h3 class="cards__title">Два вида внимания</h3>
+              <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+            </li>
+            <li class="cards__item">
+              <img src="./images/cards-recall.png" alt="Изображение скульптуры" class="cards__image">
+              <h3 class="cards__title">Recall</h3>
+              <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+            </li>
+            <li class="cards__item">
+              <img src="./images/cards-interliving.png" alt="Интерливинг" class="cards__image">
+              <h3 class="cards__title">Интерливинг</h3>
+              <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+            </li>
+            <li class="cards__item">
+              <img src="./images/cards-question.png" alt="Вопросы" class="cards__image">
+              <h3 class="cards__title">Вопросы</h3>
+              <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+            </li>
+            <li class="cards__item">
+              <img src="./images/cards-competence.png" alt="Иллюзия" class="cards__image">
+              <h3 class="cards__title">Иллюзия компетентности</h3>
+              <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            </li>
+          </ul>
+      </section>
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p> 
+        <div class="video__iframes">
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>       
+      </section>
+      <section aria-label="секция" class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+       </article>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть</p>
+        <a href="#" class="link feynman__link">Подробнее &rarr;</a>
+        <img src="./images/feynman.png" class="feynman__img" alt="Ричард Фейнман">
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -70,11 +122,18 @@
             </li>
           </ul>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть</p>
-        <a href="#" class="feynman__link">Подробнее &rarr;</a>
-        <img src="./images/feynman.png" class="feynman__img" alt="Ричард Фейнман">
+      <section class="khan">
+        <div class="khan__container">
+          <h3 class="khan__author">Салман Хан</h3>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p> 
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src="./images/khan-book.jpg" alt="Книга Салмана Хана" class="khan__book-pic">
+            <a href="#" class="link khan__buy-link">Купить Книгу&rarr;</a>
+          </div>          
+        </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -121,7 +180,25 @@
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p> 
+        <div class="resources__logo-zone">
+         <a href="#" class="link resources__link">
+          <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Ресурс Арзамас">
+         </a>
+         <a href="#" class="link resources__link">
+          <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Ресурс Н1">
+         </a>
+         <a href="#" class="link resources__link">
+          <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Ресурс Стрелка">
+         </a>
+         <a href="#" class="link resources__link">
+          <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Ресурс Полка">
+         </a>
+        </div>       
       </section>
     </main>
     <footer class="footer">
@@ -132,17 +209,17 @@
         </div>
         <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
-            <a class="footer__column-link" href="#" target="_blank">Главная</a>
-            <a class="footer__column-link" href="#" target="_blank">Концепции</a>
-            <a class="footer__column-link" href="#" target="_blank">Наставники</a>
+            <a class="link footer__column-link" href="#" target="_blank">Главная</a>
+            <a class="link footer__column-link" href="#" target="_blank">Концепции</a>
+            <a class="link footer__column-link" href="#" target="_blank">Наставники</a>
         </nav>
         <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-            <a class="footer__column-link" href="#" target="_blank">
+            <a class="link footer__column-link" href="#" target="_blank">
               <img src="./images/youtube-icon.svg" class="footer__social-icon" alt="Ютуб">YouTube</a>
-            <a class="footer__column-link" href="#" target="_blank">
+            <a class="link footer__column-link" href="#" target="_blank">
               <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="ВКонтакте">ВКонтакте</a>
-            <a class="footer__column-link" href="#" target="_blank">
+            <a class="link footer__column-link" href="#" target="_blank">
               <img src="./images//tiktok-icon.svg" class="footer__social-icon" alt="ТикТок">TikTok</a>
         </nav>
       </div>
