--- a/index.html
+++ b/index.html
@@ -219,14 +219,14 @@
         </div>
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <nav class="footer__column-links"></nav>
+          <nav class="footer__column-links">
             <a class="link footer__column-link" href="#" target="_blank">
               <img src="./images/youtube-icon.svg" class="footer__social-icon" alt="Ютуб">YouTube</a>
             <a class="link footer__column-link" href="#" target="_blank">
               <img src="./images/vk_color_white.svg" class="footer__social-icon" alt="ВКонтакте">ВКонтакте</a>
             <a class="link footer__column-link" href="#" target="_blank">
               <img src="./images//tiktok-icon.svg" class="footer__social-icon" alt="ТикТок">TikTok</a>
-          <nav class="footer__column-links">
+          </nav>
         </div>
       </div>
     </footer>
